# dft_organizer

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.cfg
archiver/: archiver.py  re_archiver.py
dft_organizer/: aiida_utils.py  archiver.py  ase_utils.py  fmt.py  re_archiver.py  utils.py
dft_organizer/aiida/: aiida_links_tree.py  export.py
dft_organizer/cli/: archive_aiida_based_cli.py  archive_cli.py  extract_archives_cli.py  rearchive_cli.py  report_cli.py
dft_organizer/core/: __init__.py  archive_core.py  reporting.py  sevenzip.py
dft_organizer/crystal_parser/: __init__.py  error_crystal_parser.py  parse_properties.py  summary.py
dft_organizer/crystal_parser/properties/: seebeck.py
dft_organizer/fleur_parser/: __init__.py  error_fleur_parser.py  summary.py
scripts/: comp_crystal_fleur_res.py  run_archive_and_rm.py  run_report.py  run_unzip_with_report.py  summ_durations.py
